...
                  value: 2,
                  message: "Name must be at least 2 characters",
                },
              }}
              render={({ field: { onChange, value } }) => (
                <TextInput
                  testID="input-name" // ✅ Add testID
                  placeholder="Full Name"
                  value={value}
                  onChangeText={onChange}
                  editable={isEdit || (!isEdit && !isView)}
                  placeholderTextColor="#9CA3AF"
                  className={`border border-gray-300 w-full bg-gray-100 rounded-lg p-3 text-base ${
...
                  value: 10,
                  message: "Phone number cannot exceed 10 digits",
                },
              }}
              render={({ field: { onChange, value } }) => (
                <TextInput
                testID="input-phone"   // ✅ Add testID

                  placeholder="Mobile Number"
                  value={value}
                  onChangeText={(text) => {
                    if (text.length <= 10) onChange(text);
                  }}
...

        {/* ===== Scrollable Middle Section (Receipts) ===== */}
        <Text className="text-lg font-semibold text-white mb-2">Receipts</Text>
        <ScrollView className="flex-1 mb-4">
          {(isEdit || (!isEdit && !isView)) && (
            <TouchableOpacity
            testID="btn-add-image"   // ✅ For adding image

              onPress={() => handleImage(true)}
              className="bg-gray-100 border-2 border-dashed border-gray-400 h-40 rounded-xl flex items-center justify-center mb-4"
            >
              <Text className="text-4xl text-gray-500">＋</Text>
              <Text className="text-gray-500">Add Image</Text>
...
            <Text className="text-center text-cyan-600 font-semibold">
              Back
            </Text>
          </TouchableOpacity>
          {!isView && (
            <TouchableOpacity
            testID="btn-done"   // ✅ Final Done button

              className="flex-1 bg-cyan-600 py-3 rounded-lg"
              onPress={() => setShowConfirm(true)} // open modal first
            >
              <Text className="text-center text-white font-semibold">Done</Text>
            </TouchableOpacity>
...
